--- a/EasyMoney/app/src/main/res/drawable/style_btn_stoke.xml
+++ b/EasyMoney/app/src/main/res/drawable/style_btn_stoke.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <!--    background color-->
-    <solid android:color="#00FFFFFF" />
+    <solid android:color="#00FFFFFF"/>
 
     <stroke
         android:width="1dp"
-        android:color="@color/white" />
+        android:color="@color/black" />
 
     <corners
         android:topLeftRadius="5dp"
