--- a/EasyMoney/app/src/main/res/layout/activity_login.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_login.xml
@@ -65,6 +65,7 @@
         tools:boxCornerRadiusTopStart="5dp">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/testUserName"
             style="@style/txtSub"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -90,6 +91,7 @@
         tools:boxCornerRadiusTopStart="5dp">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/testPassword"
             style="@style/txtSub"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -128,7 +130,7 @@
 
     <!--button sign up-->
     <TextView
-        android:id="@+id/btnGoSignUp"
+        android:id="@+id/btnGoSignUpWelcome"
         style="@style/txtSub.bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
