--- a/EasyMoney/app/src/main/res/layout/activity_welcome.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_welcome.xml
@@ -7,7 +7,21 @@
     android:background="@drawable/backgroundgrandient"
     tools:context=".WelcomeActivity">
 
+    <!--logo-->
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="276dp"
+        android:contentDescription="@string/app_icon_description"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/appicon2" />
 
+    <!--welcome text -->
     <TextView
         android:id="@+id/txtWelcome"
         android:layout_width="0dp"
@@ -21,14 +35,14 @@
         android:text="@string/txt_welcome"
         android:textColor="@color/white"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/btnGoLogin"
+        app:layout_constraintBottom_toTopOf="@+id/btnGoLoginWelcome"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
-
+    <!--login Button-->
     <Button
-        android:id="@+id/btnGoLogin"
+        android:id="@+id/btnGoLoginWelcome"
         style="@style/btnTextStyle2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -37,14 +51,14 @@
         android:layout_marginEnd="20dp"
         android:background="@drawable/style_btn_white"
         android:text="@string/txt_btn_login"
-        android:textColor="@color/primaryBlue"
+        android:textColor="@color/gray6"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtWelcome" />
-
+    <!-- register Button-->
     <Button
-        android:id="@+id/btnGoSignUp"
+        android:id="@+id/btnGoSignUpWelcome"
         style="@style/btnTextStyle1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -57,18 +71,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnGoLogin"
-        app:layout_constraintVertical_bias="0.046" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="276dp"
-        android:contentDescription="@string/app_icon_description"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/appicon2" />
+        app:layout_constraintTop_toBottomOf="@+id/btnGoLoginWelcome"
+        app:layout_constraintVertical_bias="0.034" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
