--- a/EasyMoney/app/src/main/res/layout/footer.xml
+++ b/EasyMoney/app/src/main/res/layout/footer.xml
@@ -1,40 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#9E9E9E">
+
+    <Button
+        android:id="@+id/userFoot"
+        android:layout_width="108dp"
+        android:layout_height="64dp"
+        android:backgroundTint="#FFFFFF"
+        app:icon="@drawable/ic_userinactive"
+        app:iconGravity="top"
+        app:iconTint="#676767"
+        tools:layout_editor_absoluteX="306dp"
+        tools:layout_editor_absoluteY="594dp" />
 
     <Button
         android:id="@+id/bEFoot"
         android:layout_width="102dp"
         android:layout_height="64dp"
-        android:text="Button"
+        android:backgroundTint="#FFFFFF"
+        app:icon="@drawable/ic_bigexpenseinactive"
+        app:iconGravity="top"
+        app:iconTint="#FFFFFF"
+        tools:iconTint="#676767"
         tools:layout_editor_absoluteX="204dp"
-        tools:layout_editor_absoluteY="591dp" />
+        tools:layout_editor_absoluteY="594dp" />
 
     <Button
         android:id="@+id/reportFoot"
         android:layout_width="102dp"
         android:layout_height="64dp"
-        android:text="Button"
+        android:backgroundTint="#FFFFFF"
+        android:gravity="center"
+        app:icon="@drawable/ic_reportincactive"
+        app:iconGravity="top"
+        app:iconTint="#676767"
         tools:layout_editor_absoluteX="102dp"
-        tools:layout_editor_absoluteY="591dp" />
-
-    <Button
-        android:id="@+id/userFoot"
-        android:layout_width="102dp"
-        android:layout_height="64dp"
-        android:text="Button"
-        tools:layout_editor_absoluteX="306dp"
-        tools:layout_editor_absoluteY="591dp" />
+        tools:layout_editor_absoluteY="594dp" />
 
     <Button
         android:id="@+id/trackerFoot"
         android:layout_width="102dp"
         android:layout_height="64dp"
-        android:text="Button"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="591dp" />
+        android:backgroundTint="#FFFFFF"
+        app:icon="@drawable/ic_trackerinactive"
+        app:iconGravity="top"
+        app:iconTint="#676767"
+        tools:layout_editor_absoluteY="594dp" />
+
+    <TextView
+        android:id="@+id/headerView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="HEADER"
+        android:textSize="30sp"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="22dp" />
+
+    <Button
+        android:id="@+id/helpBtn"
+        android:layout_width="52dp"
+        android:layout_height="44dp"
+        android:backgroundTint="#00FFFFFF"
+        app:icon="@drawable/ic_help"
+        app:iconTint="#676767"
+        tools:iconGravity="top"
+        tools:layout_editor_absoluteX="343dp"
+        tools:layout_editor_absoluteY="19dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
