--- a/EasyMoney/app/src/main/res/drawable/style_btn_stoke.xml
+++ b/EasyMoney/app/src/main/res/drawable/style_btn_stoke.xml
@@ -6,9 +6,8 @@
     <stroke
         android:width="1dp"
         android:color="#FFFFFF"/>
-
     <corners
-        android:Radius="5dp"/>
+        android:radius="5dp"/>
 
     <size android:height="60dp" />
 
