--- a/EasyMoney/app/src/main/res/layout/activity_welcome.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_welcome.xml
@@ -22,9 +22,10 @@
         app:srcCompat="@drawable/appicon2" />
 
     <!--welcome text -->
+    <!--login Button-->
     <TextView
         android:id="@+id/txtWelcome"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="40dp"
@@ -40,7 +41,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
-    <!--login Button-->
+
     <Button
         android:id="@+id/btnGoLoginWelcome"
         style="@style/btnTextStyle2"
