--- a/EasyMoney/app/src/main/res/values/styles.xml
+++ b/EasyMoney/app/src/main/res/values/styles.xml
@@ -14,6 +14,13 @@
         <item name="android:textColor">@color/primaryBlue</item>
     </style>
 
+    <style name="btnTextStyle3">
+        <item name="android:textSize">15sp</item>
+        <item name="android:fontFamily">@font/lato_light</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+
     <style name="txtTitle">
         <item name="android:textSize">30sp</item>
         <item name="android:fontFamily">@font/lato_light</item>
@@ -23,6 +30,23 @@
     <style name="txtSub">
         <item name="android:textSize">18sp</item>
         <item name="android:fontFamily">@font/lato_light</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="txtMainpagesubTitle">
+        <item name="android:textSize">15sp</item>
+        <item name="android:fontFamily">@font/lato_light</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+    <style name="txtMainpagesubTitle.button">
+        <item name="android:textSize">12sp</item>
+        <item name="android:fontFamily">@font/lato_bold</item>
+        <item name="android:textColor">@color/gray1</item>
+    </style>
+
+    <style name="txtMainpagesBigNumber">
+        <item name="android:textSize">36sp</item>
+        <item name="android:fontFamily">@font/lato_bold</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
