--- a/EasyMoney/app/src/main/res/layout/activity_add_expense.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_add_expense.xml
@@ -31,6 +31,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txt_addExpense">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/inputExpenseName"
             style="@style/txtSub"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -54,6 +55,7 @@
         app:layout_constraintTop_toBottomOf="@+id/expenseName">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/inputAmount"
             style="@style/txtSub"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -108,17 +110,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/category" />
 
+
+    <!-- Footer -->
+
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="358dp"
-        android:layout_height="53dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="27dp"
+        android:layout_width="363dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="26dp"
         android:background="@color/gray5"
         app:endIconDrawable="@drawable/ic_baseline_date_range_24"
         app:endIconMode="custom"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/amount">
 
@@ -142,8 +148,6 @@
             app:layout_constraintTop_toBottomOf="@+id/amount" />
     </ScrollView>
 
-
-    <!-- Footer -->
     <Spinner
         android:id="@+id/category"
         android:layout_width="match_parent"
