--- a/EasyMoney/app/src/main/res/layout/activity_profile.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_profile.xml
@@ -258,7 +258,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cardView2"
+        android:id="@+id/profileLogOutcard"
         android:layout_width="382dp"
         android:layout_height="47dp"
         android:layout_marginStart="16dp"
