--- a/EasyMoney/app/src/main/res/layout/activity_expense_tracker.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_expense_tracker.xml
@@ -276,7 +276,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/trackerAddExpenseBtn"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="1.0">
 
         <TextView
             android:id="@+id/trackerExpenseDate2"
@@ -300,11 +300,9 @@
             android:id="@+id/trackerExpensePrice1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="42dp"
             android:layout_marginTop="48dp"
-            android:layout_marginEnd="43dp"
-            app:layout_constraintEnd_toStartOf="@+id/trackerExpenseDate1"
-            app:layout_constraintStart_toEndOf="@+id/trackerExpenseName1"
+            android:layout_marginEnd="196dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -338,11 +336,9 @@
             android:id="@+id/trackerExpensePrice3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="42dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="43dp"
-            app:layout_constraintEnd_toStartOf="@+id/trackerExpenseDate3"
-            app:layout_constraintStart_toEndOf="@+id/trackerExpenseName3"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="196dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/trackerExpensePrice2" />
 
         <TextView
@@ -367,11 +363,9 @@
             android:id="@+id/trackerExpensePrice4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="42dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="43dp"
-            app:layout_constraintEnd_toStartOf="@+id/trackerExpenseDate4"
-            app:layout_constraintStart_toEndOf="@+id/trackerExpenseName4"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="180dp"
+            app:layout_constraintEnd_toEndOf="@+id/trackerExpenseDate4"
             app:layout_constraintTop_toBottomOf="@+id/trackerExpensePrice3" />
 
         <TextView
@@ -387,11 +381,9 @@
             android:id="@+id/trackerExpensePrice2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="42dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="43dp"
-            app:layout_constraintEnd_toStartOf="@+id/trackerExpenseDate2"
-            app:layout_constraintStart_toEndOf="@+id/trackerExpenseName2"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="180dp"
+            app:layout_constraintEnd_toEndOf="@+id/trackerExpenseDate2"
             app:layout_constraintTop_toBottomOf="@+id/trackerExpensePrice1" />
 
         <TextView
