--- a/EasyMoney/app/src/main/res/layout/activity_big_expenses.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_big_expenses.xml
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="176dp"
         android:layout_marginTop="8dp"
-        android:text="@string/textview"
+        android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtEnteredExp" />
 
@@ -50,7 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="176dp"
         android:layout_marginTop="8dp"
-        android:text="@string/textview"
+        android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtEntBExpCat" />
 
