--- a/EasyMoney/app/src/main/res/layout/activity_monthly_report.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_monthly_report.xml
@@ -165,7 +165,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="174dp"
         android:layout_marginTop="16dp"
-        android:text="@string/textview"
+        android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtEntBExpCat" />
 
